2011-06-16  Roland Levillain  <roland@lrde.epita.fr>

	Add routines to compute 3D connectivity numbers.

	* mln/topo/connectivity_number_3d.hh: New.
	* headers.mk, tests/unit_test/unit-tests.mk: Regen.

2011-06-15  Roland Levillain  <roland@lrde.epita.fr>

	Improve the generation of simple 3D point look-up tables.

	* tools/gen_cxx_lut: New script.
	* tools/Makefile.am (EXTRA_DIST): Add gen_cxx_lut.
	(simple_point3d_lut_26_6.hh): Add a dependency on
	$(srcdir)/gen_cxx_lut.
	Use gen_cxx_lut to generate this target.

2011-06-15  Roland Levillain  <roland@lrde.epita.fr>

	tools: s/simple_point_3d/simple_point3d/.

	* tools/simple_point_3d_lut.cc,
	* tools/simple_point_3d_lut.hh,
	* tools/simple_point_3d_lut_tbb.hh:
	Rename as...
	* tools/simple_point3d_lut.cc,
	* tools/simple_point3d_lut.hh,
	* tools/simple_point3d_lut_tbb.hh:
	...these.
	* tools/Makefile.am: s/simple_point_3d/simple_point3d/.

2011-06-14  Roland Levillain  <roland@lrde.epita.fr>

	New app: apps/generic-skel/image3d-skel-unconstrained.

	* apps/generic-skel/image3d-skel-unconstrained.cc: New.
	* apps/generic-skel/Makefile.am (bin_PROGRAMS):
	Add image3d-skel-unconstrained.
	(image3d_skel_unconstrained_SOURCES): New.
	(TESTS): Rename as...
	(generated_tests): New variable.
	($(generated_tests)): New target.
	Supersede...
	(test-image2d-skel-unconstrained test-image2d-skel-with-end-points):
	...this target.
	(CLEANFILES): Set to $(generated_tests).
	(TESTS): Add $(generated_tests).
	Add image3d-skel-unconstrained and image3d-skel-with-end-points.
	(MOSTLYCLEANFILES): Add image3d-skel-unconstrained-input.raw and
	image3d-skel-unconstrained-skel.raw.

2011-06-14  Roland Levillain  <roland@lrde.epita.fr>

	Isolate reusable code from image3d-skel-with-end-points.

	* apps/generic-skel/image3d-skel-with-end-points.cc
	(load_pgm_3d, save_raw_3d, subsampling_3d, draw_torus):
	Move functions...
	* apps/generic-skel/image3d-skel.hh: ...here (new file).
	(make_triple_torus): New function.